* change log level * rewrite api dtos
